[project]
name = "rhodes_tbr"
version = "0.0.1"
dependencies = ["numpy", "scipy"]
requires-python = ">=3.6"
authors = [{name = "Vincent Tableau Roche"}]
description = "Reverse Homogeneous Ordinary Differential Equation Solver"
license = "GPL-3.0-or-later"
keywords = ["ode", "differential", "equation"]
classifiers = [
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Mathematics",
	"Topic :: Scientific/Engineering :: Physics"
]
